@@ -2,21 +2,17 @@ package site.iotify.userservice.domain.tenant.service;
 
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
-import site.iotify.userservice.domain.tenant.entity.TenantUser;
-import site.iotify.userservice.domain.tenant.repository.TenantUserRepository;
-import site.iotify.userservice.global.adaptor.ChirpstackAdaptor;
 import site.iotify.userservice.domain.tenant.dto.TenantDto;
 import site.iotify.userservice.domain.tenant.dto.TenantInfo;
 import site.iotify.userservice.domain.tenant.entity.Tenant;
-import site.iotify.userservice.domain.tenant.repository.TenantRepository;
 import site.iotify.userservice.domain.user.dto.ChirpstackTenantUserDto;
 import site.iotify.userservice.domain.user.dto.ChirpstackUserDto;
 import site.iotify.userservice.domain.user.dto.ChirpstackUserInfo;
 import site.iotify.userservice.domain.user.entity.User;
-import site.iotify.userservice.global.exception.CreationFailedException;
-import site.iotify.userservice.global.exception.TenantNotFoundException;
-import site.iotify.userservice.global.exception.UserNotFoundException;
 import site.iotify.userservice.domain.user.repository.UserRepository;
+import site.iotify.userservice.global.adaptor.ChirpstackAdaptor;
+import site.iotify.userservice.global.exception.CreationFailedException;
+import site.iotify.userservice.global.exception.UserNotFoundException;
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -27,16 +23,12 @@ import java.util.stream.Collectors;
 @Service
 @Transactional
 public class TenantService {
-    private final TenantRepository tenantRepository;
     private final UserRepository userRepository;
     private final ChirpstackAdaptor chirpstackAdaptor;
-    private final TenantUserRepository tenantUserRepository;
 
-    public TenantService(TenantRepository tenantRepository, ChirpstackAdaptor chirpstackAdaptor, UserRepository userRepository, TenantUserRepository tenantUserRepository) {
-        this.tenantRepository = tenantRepository;
+    public TenantService(ChirpstackAdaptor chirpstackAdaptor, UserRepository userRepository) {
         this.chirpstackAdaptor = chirpstackAdaptor;
         this.userRepository = userRepository;
-        this.tenantUserRepository = tenantUserRepository;
     }
 
     /**
@@ -47,49 +39,41 @@ public class TenantService {
      * @return
      */
     public TenantInfo registerTenant(TenantInfo tenantInfo, String userId) {
+        if (!userRepository.existsById(userId)) {
+            throw new UserNotFoundException(String.format("userId %s not found", userId));
+        }
         String tenantId = chirpstackAdaptor.createTenant(
                 new TenantDto(tenantInfo, LocalDateTime.now(), LocalDateTime.now())
         );
-
         if (Objects.isNull(tenantId)) {
             throw new CreationFailedException();
         }
-
         tenantInfo.setId(tenantId);
-        Tenant tenant = tenantRepository.save(TenantInfo.toEntity(tenantInfo));
-
         addUserInTenant(userId, tenantId, true);
 
-        return TenantInfo.toDto(tenant);
+        return tenantInfo;
     }
 
     /**
-     * 조직을 반환합니다.
+     * 조직을 반환합니다. ids = nullable
+     * ids가 null이 아니라면 해당 조직을 반환합니다.
+     * ids가 null이면 전체 조직을 반환합니다.
      *
      * @param ids
-     * @return
+     * @return List<TenantInfo>
      */
     public List<TenantInfo> getTenants(List<String> ids) {
-        List<Tenant> tenants = tenantRepository.findAllById(ids);
-        if (tenants.isEmpty()) {
-            throw new TenantNotFoundException("Tenant with Id " + ids + " not found");
-        }
-
         Map<String, TenantInfo> tenantInfoMap = chirpstackAdaptor
                 .getTenants(Integer.MAX_VALUE, 0, null, null)
                 .stream()
                 .collect(Collectors.toMap(TenantInfo::getId, tenantInfo -> tenantInfo));
-
-        return tenants.stream()
-                .map(tenant -> {
-                    TenantInfo tenantInfo = tenantInfoMap.get(tenant.getId());
-                    if (tenantInfo == null) {
-                        throw new TenantNotFoundException("Tenant with Id " + tenant.getId() + " not found (synchronization failed)");
-                    } else {
-                        return tenantInfo;
-                    }
-                })
-                .collect(Collectors.toList());
+        if (ids != null) {
+            return tenantInfoMap.values().stream()
+                    .filter(tenantInfo -> ids.contains(tenantInfo.getId()))
+                    .toList();
+        } else {
+            return tenantInfoMap.values().stream().toList();
+        }
     }
 
     /**
@@ -112,15 +96,9 @@ public class TenantService {
      * @param tenantInfo
      * @return
      */
-    public TenantInfo updateTenant(TenantInfo tenantInfo) {
-        Tenant tenant = tenantRepository.findById(tenantInfo.getId()).orElseThrow(() ->
-                new TenantNotFoundException("id : " + tenantInfo.getId() + " not found"));
-
+    public void updateTenant(TenantInfo tenantInfo) {
+        Tenant tenant = TenantDto.toEntity(chirpstackAdaptor.getTenant(tenantInfo.getId()));
         chirpstackAdaptor.updateTenant(new TenantDto(tenantInfo, tenant.getCreatedAt(), LocalDateTime.now()));
-
-        return TenantInfo.toDto(
-                tenantRepository.save(TenantDto.toEntity(chirpstackAdaptor.getTenant(tenantInfo.getId())))
-        );
     }
 
     /**
@@ -132,35 +110,18 @@ public class TenantService {
     public void addUserInTenant(String userId, String tenantId, boolean isAdmin) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException(String.format("user {%s} not found", userId)));
-        Tenant tenant = tenantRepository.findById(tenantId).orElseThrow(() -> new TenantNotFoundException(String.format("tenant %s not found", tenantId)));
 
-        if (checkSync(tenantId)) {
-            chirpstackAdaptor.addUserInTenant(new ChirpstackTenantUserDto(
-                    new ChirpstackUserInfo(
-                            user.getEmail(),
-                            isAdmin,
-                            true,
-                            user.getEmail(),
-                            null,
-                            LocalDateTime.now(),
-                            LocalDateTime.now(),
-                            true,
-                            true
-                    ), tenantId));
-            tenantUserRepository.save(new TenantUser(new TenantUser.PK(user.getId(), tenantId), user, tenant));
-        }
-    }
-
-    private boolean checkSync(String tenantId) {
-        Tenant tenant = tenantRepository.findById(tenantId)
-                .orElseThrow(() -> new TenantNotFoundException(String.format("tenant %s not found", tenantId)));
-        TenantInfo repositoryTenantInfo = TenantInfo.toDto(tenant);
-        TenantDto tenantDto = chirpstackAdaptor.getTenant(tenantId);
-        if (tenantDto == null) {
-            throw new TenantNotFoundException(String.format("tenant %s not found", tenantId));
-        }
-        TenantInfo chirpstackTenantInfo = tenantDto.getTenant();
-
-        return chirpstackTenantInfo.equals(repositoryTenantInfo);
+        chirpstackAdaptor.addUserInTenant(new ChirpstackTenantUserDto(
+                new ChirpstackUserInfo(
+                        user.getEmail(),
+                        isAdmin,
+                        true,
+                        user.getEmail(),
+                        null,
+                        LocalDateTime.now(),
+                        LocalDateTime.now(),
+                        true,
+                        true
+                ), tenantId));
     }
 }
